--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,3 @@
 Django==1.8.17
 pytz
-psycopg2 #==2.6.1  # postgreSQL
-django-pipeline==1.6.8
-django-autoslug==1.9.3
-django-parler==1.5.1
-django-ckeditor==5.0.3
-
-pillow==3.2.0
-sorl-thumbnail==12.3
-reportlab==3.3.0
-beautifulsoup4==4.3.2
-bleach==1.4.2
-mistune==0.5
-rtfunicode==1.0
-html5lib==0.9999999  # the latest html5lib==0.999999999 install fails
-
-redis==2.10.5
-
-Whoosh==2.7.4
-unicodecsv
+psycopg2-binary
